ci: GitHub Pages 배포 트리거 브랜치를 master로 변경

--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -2,7 +2,7 @@ name: Deploy Flutter Web to GitHub Pages
 
 on:
   push:
-    branches: [infra]
+    branches: [master]
   workflow_dispatch:
 
 permissions:
