--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -235,33 +235,98 @@
     "title": "DID",
     "titleEn": "DID",
     "slug": "did",
-    "description": "작성 예정",
-    "techStack": [],
-    "period": "",
+    "description": "광고 대행사용 Digital Information Display 시스템으로, 기기별로 지정 시간에 광고 영상을 송출하고 원격 제어·OTA를 지원합니다.",
+    "techStack": [
+      "Android",
+      "Kotlin",
+      "Jetpack Compose",
+      "SSE",
+      "ADB",
+      "OTA"
+    ],
+    "period": "2024.11 - 2025.04",
     "open": false,
     "operating": false,
-    "techParticipants": {},
+    "techParticipants": {
+      "앱": "1명(본인)",
+      "백엔드": "1명",
+      "웹": "1명"
+    },
     "links": {
       "repo": "",
       "demo": ""
     },
-    "thumbnail": ""
+    "thumbnail": "assets/images/did.jpg",
+    "overview": "초기에는 단일 앱으로 광고 송출·서버 통신(헬스체크)·OTA까지 수행했으나, 자체 업데이트 중 프로세스 종료 이슈로 OTA가 불가했습니다. 이를 해결하기 위해 광고 플레이어 앱과 서버와 SSE로 통신하는 컨트롤 앱을 분리하여, 컨트롤 앱이 플레이어를 제어·업데이트하도록 아키텍처를 재구성했습니다. Jetpack Compose 기반 선언형 UI로 빠르게 개발했고, 관리자 페이지에서 SSE 명령(재시작/업데이트/송출 정지·재개/기기 종료)을 수신해 원격 제어가 가능합니다. 루팅된 디바이스에서는 ADB를 활용해 앱 업데이트·기기 조작을 자동화했습니다.",
+    "achievements": [
+      "OTA 가능 아키텍처 확립: 플레이어/컨트롤 앱 분리로 자체 업데이트 중단 이슈 해결",
+      "원격 제어 파이프라인: SSE 기반 관리자 명령(재시작/업데이트/정지/재개/종료) 처리",
+      "재생 리포팅: 각 광고 종료 시 서버로 재생된 영상 식별자/회차 보고(광고별 트래킹)",
+      "배포 자동화: 루팅 디바이스 ADB를 통한 무인 설치·제어 절차 구현",
+      "생산성: Jetpack Compose 채택으로 선언형 UI 생산성 확보",
+      "무결성 검증: 백엔드 협업으로 광고 영상 체크섬 검증을 통해 파일 손상 탐지",
+      "프리로딩 전환: 이중 플레이어 구성으로 다음 영상 선적재 후 무중단 전환(초기 로딩 지연 완화)"
+    ],
+    "improvements": [
+      "플레이어 종료 시 메모리 완전 해제 미흡: 자원 해제/참조 해지/프로세스 분리 점검 필요",
+      "헬스체크 고도화 및 자동 재시작 정책 정교화 필요",
+      "체크섬 불일치 자동 대응 미구현: 재다운로드/검증/롤백 자동화 필요"
+    ]
   },
   {
     "title": "새폰내폰",
     "titleEn": "New Phone My Phone",
     "slug": "new_phone_my_phone",
-    "description": "작성 예정",
-    "techStack": [],
-    "period": "",
+    "description": "대리점과 고객을 연결하여 투명한 가격 정책으로 접근성을 높이는 휴대폰 구매 중개 플랫폼입니다.",
+    "techStack": [
+      "Flutter",
+      "Flutter Web",
+      "Riverpod",
+      "Go Router",
+      "Freezed",
+      "Retrofit",
+      "Dio"
+    ],
+    "period": "2024.09 - 2024.11",
     "open": false,
     "operating": false,
-    "techParticipants": {},
+    "sideProject": true,
+    "techParticipants": {
+      "프론트엔드": "1명(본인)",
+      "백엔드": "1명"
+    },
     "links": {
       "repo": "",
       "demo": ""
     },
-    "thumbnail": ""
+    "thumbnail": "assets/images/new_phone_my_phone.jpg",
+    "overview": "고객이 원하는 기종/데이터 사용량/기존 통신사 등의 정보를 제출하면, 대리점이 요금제와 함께 가격 견적을 제시하고, 고객이 수락 시 채팅으로 바로 연결됩니다. 견적 비교의 불편을 줄이고 투명한 가격 정보를 제공해 구매 의사결정을 돕습니다. 대리점 영업 및 서비스 운영의 어려움으로 현재는 서비스가 종료된 상태입니다.",
+    "achievements": [
+      "정보 기반 견적 산출: 기종·데이터·통신사 정보를 바탕으로 대리점 견적 제안",
+      "매칭/채팅 연동: 견적 수락 시 즉시 채팅 연결로 전환 손실 최소화",
+      "가격 투명성 제고: 중개 구조로 고객 접근성 향상",
+      "플랫폼 일원화: 사용자 앱과 대리점 웹을 모두 Flutter로 개발하여 코드 공유 및 생산성 확보",
+      "상호작용 강화: 견적 입력 단계에 직접 제작한 인터랙션 요소로 이탈 방지",
+      "채팅 UX 구현: ListView.reverse와 Row 정렬을 활용, 아래에서 위로 흐르고 판매자/고객 메시지 구분",
+      "색상 선택 애니메이션: 실제 기기 사진 2장을 겹쳐 자연스러운 컬러 전환 구현",
+      "가격 범위 입력 UX: 숫자 직접 입력 대신 슬라이더로 최소·최대 가격을 직관적으로 조절"
+    ],
+    "improvements": [
+      "실제 대리점 견적 프로세스와 괴리: 현업 흐름에 맞춘 견적 입력/관리 방식 재설계 필요",
+      "실시간 알림/사운드 피드백 미구현: 견적 요청 도착 시 배달앱 수준의 즉각 알림·음향 제공 필요",
+      "응답 추적/오케스트레이션 미흡: 대리점별 응답 SLA·미응답 자동 알림(리마인드)·재배정 흐름 부족"
+    ],
+    "screens": [
+      "assets/images/projects/new_phone_my_phone/001.jpg",
+      "assets/images/projects/new_phone_my_phone/002.jpg",
+      "assets/images/projects/new_phone_my_phone/003.gif",
+      "assets/images/projects/new_phone_my_phone/004.jpg",
+      "assets/images/projects/new_phone_my_phone/005.jpg",
+      "assets/images/projects/new_phone_my_phone/006.jpg",
+      "assets/images/projects/new_phone_my_phone/007.jpg",
+      "assets/images/projects/new_phone_my_phone/008.jpg",
+      "assets/images/projects/new_phone_my_phone/009.jpg"
+    ]
   },
   {
     "title": "A-PASS",
@@ -272,6 +337,7 @@
     "period": "",
     "open": false,
     "operating": false,
+    "sideProject": true,
     "techParticipants": {},
     "links": {
       "repo": "",
@@ -288,6 +354,7 @@
     "period": "",
     "open": false,
     "operating": false,
+    "sideProject": true,
     "techParticipants": {},
     "links": {
       "repo": "",
@@ -304,6 +371,7 @@
     "period": "",
     "open": false,
     "operating": false,
+    "sideProject": true,
     "techParticipants": {},
     "links": {
       "repo": "",
