--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -24,6 +24,8 @@
       "demo": ""
     },
     "thumbnail": "assets/images/7meerkat.png",
+    "featured": true,
+    "featuredOrder": 3,
     "screens": [
       "assets/images/projects/7meerkat_user_app/001.jpg",
       "assets/images/projects/7meerkat_user_app/002.jpg",
@@ -130,7 +132,7 @@
     "title": "달채비",
     "titleEn": "Dalchaebi",
     "slug": "dalchaebi",
-    "description": "여성의 월경 경험을 데이터와 UX로 개선하는 앱으로, AI 기반 월경주기 분석·예측, 기록 기반 월경 리포트, 루틴 관리, 유료 심리검사(인앱결제)를 제공하며 커스텀 차트로 직관적인 건강 인사이트를 제시합니다.",
+    "description": "AI 기반 월경주기 분석·예측과 리포트·루틴·심리검사를 제공하는 여성 건강 관리 앱",
     "techStack": [
       "Flutter",
       "Riverpod",
@@ -182,7 +184,7 @@
     "title": "히어유알",
     "titleEn": "Here U R",
     "slug": "here_u_r",
-    "description": "모임 일정 관리와 운영을 더 쉽게 해주는 앱. 1.0 iOS 배포 이슈 해결 및 레거시(GetX) 리팩토링 후 2.0에서 캘린더 기반 일정·위치 서비스를 제공하고 딥링크를 지원했습니다.",
+    "description": "모임 일정·운영을 위한 캘린더·위치·딥링크를 갖춘 모임 관리 앱",
     "techStack": [
       "Flutter",
       "Riverpod",
@@ -203,6 +205,8 @@
       "demo": ""
     },
     "thumbnail": "assets/images/here_u_r.jpg",
+    "featured": true,
+    "featuredOrder": 2,
     "screens": [
       "assets/images/projects/here_u_r/001.jpg",
       "assets/images/projects/here_u_r/002.jpg",
@@ -235,7 +239,7 @@
     "title": "DID",
     "titleEn": "DID",
     "slug": "did",
-    "description": "광고 대행사용 Digital Information Display 시스템으로, 기기별로 지정 시간에 광고 영상을 송출하고 원격 제어·OTA를 지원합니다.",
+    "description": "광고 영상 송출·원격 제어·OTA를 지원하는 Digital Information Display 시스템",
     "techStack": [
       "Android",
       "Kotlin",
@@ -277,7 +281,7 @@
     "title": "새폰내폰",
     "titleEn": "New Phone My Phone",
     "slug": "new_phone_my_phone",
-    "description": "대리점과 고객을 연결하여 투명한 가격 정책으로 접근성을 높이는 휴대폰 구매 중개 플랫폼입니다.",
+    "description": "대리점과 고객을 연결해 투명한 가격 견적과 채팅을 제공하는 휴대폰 구매 플랫폼",
     "techStack": [
       "Flutter",
       "Flutter Web",
@@ -300,6 +304,8 @@
       "demo": ""
     },
     "thumbnail": "assets/images/new_phone_my_phone.jpg",
+    "featured": true,
+    "featuredOrder": 1,
     "overview": "고객이 원하는 기종/데이터 사용량/기존 통신사 등의 정보를 제출하면, 대리점이 요금제와 함께 가격 견적을 제시하고, 고객이 수락 시 채팅으로 바로 연결됩니다. 견적 비교의 불편을 줄이고 투명한 가격 정보를 제공해 구매 의사결정을 돕습니다. 대리점 영업 및 서비스 운영의 어려움으로 현재는 서비스가 종료된 상태입니다.",
     "achievements": [
       "정보 기반 견적 산출: 기종·데이터·통신사 정보를 바탕으로 대리점 견적 제안",
@@ -332,7 +338,7 @@
     "title": "A-PASS",
     "titleEn": "A-PASS",
     "slug": "a_pass",
-    "description": "국내 미술 전시 예매의 디지털 전환을 목표로 한 플랫폼. 1개월 내에 신속 구축하여 ‘마르크 샤갈 전시’ 예매 사이트로 오픈.",
+    "description": "국내 미술 전시 예매·결제를 지원하는 플러터 웹 플랫폼(사용자/관리자 웹)",
     "techStack": [
       "Flutter Web",
       "Riverpod",
@@ -380,7 +386,7 @@
     "title": "프렌드 아카데미",
     "titleEn": "Friend Academy",
     "slug": "friend_academy",
-    "description": "비대면 교육 수요에 대응하는 교육 영상 시청 플랫폼. 춤 관련 프로그램/강좌를 커리큘럼에 맞춰 수강하고 진행률을 확인.",
+    "description": "춤 커리큘럼 기반 영상 학습과 진행률 관리가 가능한 교육 스트리밍 플랫폼",
     "techStack": [
       "Vue 3 (User Web)",
       "Flutter Web (Admin)",
@@ -433,7 +439,7 @@
     "title": "비공페이",
     "titleEn": "B0 Pay",
     "slug": "b0pay",
-    "description": "인플루언서를 통한 티켓/상품 판매 대행 플랫폼.",
+    "description": "인플루언서 기반 티켓·상품 판매를 지원하는 커머스 플랫폼",
     "techStack": [
       "Flutter Web (User/Admin)",
       "Billgate",
