content: 이력서, 프로젝트 내용 수정

--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -16,8 +16,7 @@
     "open": true,
     "operating": true,
     "techParticipants": {
-      "풀스택": "2명(본인 포함)",
-      "디자이너": "1명"
+      "풀스택": "2명(본인 포함)"
     },
     "links": {
       "repo": "",
